# test-gear

./: .dockerignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  README.md  manifest.json  pyproject.toml  run.py
.gitlab/merge_request_templates/: default.md
docs/: release_notes.md
fw_gear_fw_example/: main.py  parser.py
tests/: test_parser.py
