[tool.poetry]
name = "fw-gear-testing"
version = "0.0.1"
description = "hpc testing"
authors = ["Flywheel <support@flywheel.io>"]
license = "MIT"

    [tool.poetry.dependencies]
    python = "^3.8"
    lxml = "^4.6.1"
    Pillow = "^9"
    piexif = "^1.1.3"
    pydicom = "^2.1.1"
    pypng = "^0.0.20"
    flywheel-sdk = "^16.8.0"
    flywheel-gear-toolkit = {version = "^0.6.17", extras = ["sdk"]}
    matplotlib = "^3.6.3"
    argparse = "^1.4.0"
    psutil = "^5.9.0"
    beautifulsoup4 = "^4.11.1"
    errorhandler = "^2.0.1"
    nibabel = "^5.0.0"
    nipype = "^1.8.5"
    pandas = "^1.5.3"


    [tool.poetry.dev-dependencies]
    pytest = "^6.1.2"
    pytest-cov = "^2.10.1"
    pytest-mock = "^3.3.1"
    coverage = {extras = ["toml"], version = "^5.3"}
    pylint = "^2.6.0"
    pycodestyle = "^2.6.0"
    pydocstyle = "^5.1.1"
    black = "^22"
    isort = "^5.6.4"
    rpdb = "^0.1.6"
    remote-pdb = "^2.1.0"
    dill = "^0.3.4"
    jupyter-client = "6.1.11"
    jupyter = "^1.0.0"
    docker = "^5.0.2"


[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
