[tool.poetry]
name = "fw-gear-testing"
version = "0.0.1"
description = "testing"
authors = ["Flywheel <support@flywheel.io>"]
license = "MIT"

[tool.poetry.dependencies]
    python="^3.12"
    flywheel-sdk = "^21.1.0"
    flywheel-gear-toolkit = {version = "^0.6.22", extras = ["sdk"]}

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
